
    YARN-2194. Fix bug causing CGroups functionality to fail on RHEL7.
    (Wei Yan via vvasudev)

    YARN-4384. updateNodeResource CLI should not accept negative values for resource.
    (Junping Du via wangda)

    YARN-3766. Fixed the apps table column error of generic history web UI.
    (Xuan Gong via zjshen)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    YARN-4344. NMs reconnecting with changed capabilities can lead to wrong
    cluster resource calculations (Varun Vasudev via jlowe)

    YARN-3840. Resource Manager web ui issue when sorting application by id
    (with application having id > 9999) (Mohammad Shahid Khan & Varun Saxena)

    YARN-4398. Remove unnecessary synchronization in RMStateStore. (Ning Ding via jianhe)

    YARN-4348. ZKRMStateStore.syncInternal shouldn't wait for sync completion
    for avoiding blocking ZK's event thread. (ozawa)

    YARN-4424. Fix deadlock in RMAppImpl. (jianhe via wtan)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-4009. CORS support for ResourceManager REST API. ( Varun Vasudev via jeagles)

    YARN-3170. YARN architecture document needs updating. (Brahma Reddy Battula
    via ozawa)

    YARN-3967. Fetch the application report from the AHS if the RM does not know about it.
    (Mit Desai via xgong)

    YARN-2801. Add documentation for node labels feature. (Wangda Tan and Naganarasimha 
    G R  via ozawa)

    YARN-2513. Host framework UIs in YARN for use with the ATS (jeagles)

  OPTIMIZATIONS

  BUG FIXES

    YARN-3793. Several NPEs when deleting local files on NM recovery (Varun
    Saxena via jlowe)

    YARN-3508. Prevent processing preemption events on the main RM dispatcher. 
    (Varun Saxena via wangda)

    YARN-3690. [JDK8] 'mvn site' fails. (Brahma Reddy Battula via aajisaka)

    YARN-3905. Application History Server UI NPEs when accessing apps run after